# ragas-eval

./: .env-template  README.md  pyproject.toml  rag-only.py  rag-ragas.py  templatehub.py
